# Object-Tracking-with-DepthAI-Arduino-and-YOLOv8

./: LICENSE  README.md  install.sh  run_project.py
catkin_ws/: CMakeLists.txt  package.xml
catkin_ws/src/: main.py  run_project.py
