<?xml version="1.0"?>
<package format="2">
  <name>object_tracking</name>
  <version>0.0.0</version>
  <description>The object tracking package</description>

  <maintainer email="eyupdnz2101@gmail.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
